[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/CharacterMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/random_characters/hi-tops_idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/random_characters/yakuza_idle.png" type="Texture" id=3]
[ext_resource path="res://Assets/random_characters/punker.png" type="Texture" id=4]
[ext_resource path="res://Assets/random_characters/goth_idle.png" type="Texture" id=5]
[ext_resource path="res://Assets/random_characters/girl_idle.png" type="Texture" id=6]
[ext_resource path="res://Assets/random_characters/agent.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0.160784, 0.160784, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Player0",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Player1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Player2",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Player3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Player4",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Player5",
"speed": 5.0
} ]

[node name="CharacterMenu" type="Node2D"]
position = Vector2( -3, 0 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 3.0
margin_right = 344.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 1 )

[node name="PlayerSelect" type="AnimatedSprite" parent="."]
position = Vector2( 176, 38 )
frames = SubResource( 2 )
animation = "Player0"

[node name="Left" type="Button" parent="."]
margin_left = 80.0
margin_top = 22.0
margin_right = 116.0
margin_bottom = 42.0
text = "Left"

[node name="Right" type="Button" parent="."]
margin_left = 233.0
margin_top = 22.0
margin_right = 277.0
margin_bottom = 42.0
text = "Right"

[node name="Gender" type="VBoxContainer" parent="."]
margin_left = 227.0
margin_top = 68.0
margin_right = 302.0
margin_bottom = 124.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="TextGender" type="RichTextLabel" parent="Gender"]
margin_right = 75.0
text = "Gender"

[node name="Male" type="CheckBox" parent="Gender"]
margin_top = 4.0
margin_right = 75.0
margin_bottom = 28.0
text = "Male"

[node name="Female" type="CheckBox" parent="Gender"]
margin_top = 32.0
margin_right = 75.0
margin_bottom = 56.0
text = "Female"

[node name="Name" type="LineEdit" parent="."]
margin_left = 80.0
margin_top = 76.0
margin_right = 220.0
margin_bottom = 100.0
rect_scale = Vector2( 0.4, 0.4 )
max_length = 15
placeholder_text = "Enter Name"

[node name="Profession" type="VBoxContainer" parent="."]
margin_left = 81.0
margin_top = 103.0
margin_right = 177.0
margin_bottom = 143.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="ProfessionDropDown" type="OptionButton" parent="Profession"]
margin_right = 96.0
margin_bottom = 20.0
text = "Profession"

[node name="TribeDropDown" type="OptionButton" parent="Profession"]
margin_top = 24.0
margin_right = 96.0
margin_bottom = 44.0
text = "Tribe"

[node name="Play" type="Button" parent="."]
margin_left = 160.0
margin_top = 153.0
margin_right = 198.0
margin_bottom = 173.0
disabled = true
text = "Play"

[node name="FileExplorer" type="Control" parent="."]
margin_left = 234.0
margin_top = 108.0
margin_right = 274.0
margin_bottom = 148.0

[node name="Import" type="Button" parent="FileExplorer"]
margin_right = 66.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Import"

[node name="FileDialog" type="FileDialog" parent="FileExplorer"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -58.0
margin_right = 270.0
margin_bottom = 114.0
rect_scale = Vector2( 0.3, 0.3 )
window_title = "Open a File"
mode = 0
access = 2

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="toggled" from="Gender/Male" to="." method="_on_Male_toggled"]
[connection signal="toggled" from="Gender/Female" to="." method="_on_Female_toggled"]
[connection signal="text_changed" from="Name" to="." method="_on_Name_text_changed"]
[connection signal="item_selected" from="Profession/ProfessionDropDown" to="." method="_on_DropDown_item_selected"]
[connection signal="item_selected" from="Profession/TribeDropDown" to="." method="_on_TribeDropDown_item_selected"]
[connection signal="pressed" from="FileExplorer/Import" to="." method="_on_Import_pressed"]
[connection signal="file_selected" from="FileExplorer/FileDialog" to="." method="_on_FileDialog_file_selected"]
